--- a/main/output.css
+++ b/main/output.css
@@ -440,6 +440,17 @@ video {
   display: none;
 }
 
+.icon{
+  margin-right: 0.25rem;
+  border-radius: 5px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -540,28 +551,46 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .absolute{
   position: absolute;
 }
 
 .relative{
   position: relative;
-}
-
-.inset-0{
-  inset: 0px;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-\[5\.25rem\]{
-  bottom: 5.25rem;
-}
-
-.bottom-\[7\.5rem\]{
-  bottom: 7.5rem;
 }
 
 .left-8{
@@ -572,32 +601,12 @@ video {
   left: 10rem;
 }
 
-.left-\[15\.5rem\]{
-  left: 15.5rem;
-}
-
-.left-\[29\.25rem\]{
-  left: 29.25rem;
-}
-
-.left-\[38rem\]{
-  left: 38rem;
-}
-
-.left-\[6\.5rem\]{
-  left: 6.5rem;
-}
-
-.right-20{
-  right: 5rem;
-}
-
 .right-40{
   right: 10rem;
 }
 
-.right-\[11\.25rem\]{
-  right: 11.25rem;
+.right-6{
+  right: 1.5rem;
 }
 
 .right-\[19rem\]{
@@ -608,24 +617,26 @@ video {
   top: 0.75rem;
 }
 
-.top-4{
-  top: 1rem;
+.top-6{
+  top: 1.5rem;
 }
 
-.top-5{
-  top: 1.25rem;
+.mx-44{
+  margin-left: 11rem;
+  margin-right: 11rem;
 }
 
-.top-\[-61px\]{
-  top: -61px;
-}
-
-.mb-1{
-  margin-bottom: 0.25rem;
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-20{
+  margin-bottom: 5rem;
 }
 
 .mb-4{
@@ -640,12 +651,20 @@ video {
   margin-bottom: 1px;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
+.mt-28{
+  margin-top: 7rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
 }
 
 .mt-\[-3\.5rem\]{
@@ -656,8 +675,16 @@ video {
   margin-top: 1px;
 }
 
+.block{
+  display: block;
+}
+
 .inline-block{
   display: inline-block;
+}
+
+.inline{
+  display: inline;
 }
 
 .flex{
@@ -672,12 +699,16 @@ video {
   height: 3rem;
 }
 
-.h-\[12\.25rem\]{
-  height: 12.25rem;
+.h-6{
+  height: 1.5rem;
 }
 
 .h-\[13rem\]{
   height: 13rem;
+}
+
+.h-\[18rem\]{
+  height: 18rem;
 }
 
 .h-\[30\%\]{
@@ -724,12 +755,12 @@ video {
   width: 100vw;
 }
 
-.w-\[19\.6rem\]{
-  width: 19.6rem;
-}
-
 .w-\[27rem\]{
   width: 27rem;
+}
+
+.w-\[33rem\]{
+  width: 33rem;
 }
 
 .w-\[35rem\]{
@@ -740,16 +771,20 @@ video {
   width: 37rem;
 }
 
-.w-\[38\%\]{
-  width: 38%;
-}
-
 .w-\[4\.75rem\]{
   width: 4.75rem;
 }
 
-.w-\[40\%\]{
-  width: 40%;
+.w-\[43rem\]{
+  width: 43rem;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.w-\[56\%\]{
+  width: 56%;
 }
 
 .w-full{
@@ -760,10 +795,6 @@ video {
   max-width: 100vw;
 }
 
-.max-w-\[700px\]{
-  max-width: 700px;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -772,16 +803,16 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
   flex-direction: row;
-}
-
-.flex-col{
-  flex-direction: column;
 }
 
 .items-center{
@@ -794,6 +825,18 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-52{
+  gap: 13rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .space-x-12 > :not([hidden]) ~ :not([hidden]){
@@ -810,8 +853,8 @@ video {
   overflow-x: hidden;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-md{
@@ -827,23 +870,9 @@ video {
   border-bottom-left-radius: 0.375rem;
 }
 
-.rounded-l-lg{
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
-.rounded-r-md{
-  border-top-right-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
-}
-
 .rounded-t-md{
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
-}
-
-.rounded-tl-md{
-  border-top-left-radius: 0.375rem;
 }
 
 .border{
@@ -858,24 +887,13 @@ video {
   border-right-width: 2px;
 }
 
+.border-t-2{
+  border-top-width: 2px;
+}
+
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-color-gray{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-color-red{
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 5 17 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -888,28 +906,24 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-yellow-400{
-  --tw-gradient-from: #facc15 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(250 204 21 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.via-yellow-300{
-  --tw-gradient-to: rgb(253 224 71 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #fde047 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-yellow-100{
-  --tw-gradient-to: #fef9c3 var(--tw-gradient-to-position);
 }
 
 .object-cover{
@@ -917,12 +931,13 @@ video {
      object-fit: cover;
 }
 
-.p-9{
-  padding: 2.25rem;
-}
-
 .p-\[22px\]{
   padding: 22px;
+}
+
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 
 .px-36{
@@ -945,9 +960,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-9{
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-3{
@@ -965,53 +980,98 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-9{
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .pb-2{
   padding-bottom: 0.5rem;
 }
 
-.pb-\[2\.75rem\]{
-  padding-bottom: 2.75rem;
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
-.pl-1{
-  padding-left: 0.25rem;
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pb-\[2\.75rem\]{
+  padding-bottom: 2.75rem;
 }
 
 .pl-40{
   padding-left: 10rem;
 }
 
+.pl-60{
+  padding-left: 15rem;
+}
+
+.pl-96{
+  padding-left: 24rem;
+}
+
 .pl-\[2rem\]{
   padding-left: 2rem;
+}
+
+.pl-\[34rem\]{
+  padding-left: 34rem;
 }
 
 .pl-\[8rem\]{
   padding-left: 8rem;
 }
 
-.pr-1{
-  padding-right: 0.25rem;
-}
-
 .pr-3{
   padding-right: 0.75rem;
 }
 
-.pr-\[15rem\]{
-  padding-right: 15rem;
+.pr-5{
+  padding-right: 1.25rem;
 }
 
-.pr-\[2px\]{
-  padding-right: 2px;
+.pr-56{
+  padding-right: 14rem;
+}
+
+.pr-6{
+  padding-right: 1.5rem;
 }
 
 .pr-\[2rem\]{
   padding-right: 2rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
 }
 
 .pt-\[2\.5rem\]{
@@ -1026,12 +1086,25 @@ video {
   font-family: Nunito Sans;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-\[12px\]{
   font-size: 12px;
 }
 
 .text-\[14px\]{
   font-size: 14px;
+}
+
+.text-\[15px\]{
+  font-size: 15px;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-\[18px\]{
@@ -1050,9 +1123,9 @@ video {
   font-size: 30px;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
@@ -1060,9 +1133,9 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-black{
@@ -1077,16 +1150,20 @@ video {
   font-weight: 800;
 }
 
-.font-extralight{
-  font-weight: 200;
-}
-
 .font-light{
   font-weight: 300;
 }
 
 .font-normal{
   font-weight: 400;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .tracking-wider{
@@ -1102,14 +1179,19 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-color-red{
+.text-gray-500{
   --tw-text-opacity: 1;
-  color: rgb(212 5 17 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1119,10 +1201,6 @@ video {
 
 .decoration-1{
   text-decoration-thickness: 1px;
-}
-
-.opacity-30{
-  opacity: 0.3;
 }
 
 .shadow-lg{
@@ -1137,72 +1215,66 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.outline-0{
-  outline-width: 0px;
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition-transform{
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.shadow-gray-300{
+  --tw-shadow-color: #d1d5db;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
-.placeholder\:overflow-visible::-moz-placeholder{
-  overflow: visible;
-}
-
-.placeholder\:overflow-visible::placeholder{
-  overflow: visible;
-}
-
-.placeholder\:text-gray-500::-moz-placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray-500::placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.hover\:scale-100:hover{
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:text-color-red:hover{
-  --tw-text-opacity: 1;
-  color: rgb(212 5 17 / var(--tw-text-opacity));
+.shadow-gray-500{
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .hover\:underline:hover{
   text-decoration-line: underline;
 }
 
-.hover\:shadow-2xl:hover{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:outline-4:hover{
-  outline-width: 4px;
+.hover\:shadow-gray-500:hover{
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
-.hover\:drop-shadow-2xl:hover{
-  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
+@media (min-width: 640px){
+  .sm\:hidden{
+    display: none;
+  }
 
-@media (min-width: 768px){
-  .md\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .sm\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 
 @media (min-width: 1024px){
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:hidden{
+    display: none;
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:justify-end{
+    justify-content: flex-end;
+  }
+
+  .lg\:text-left{
+    text-align: left;
   }
 }
