--- a/src/input.css
+++ b/src/input.css
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .icon {
+    @apply bg-yellow-500 px-2 py-1 rounded-[5px] mr-1;
+  }
+}
